@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021, 2022 Lablicate GmbH.
+ * Copyright (c) 2021, 2023 Lablicate GmbH.
  *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
@@ -13,7 +13,6 @@
 package org.eclipse.chemclipse.support.text;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
 
 public interface ILabel {
 
@@ -21,7 +20,7 @@ public interface ILabel {
 
 	static String[] getItems(Enum<?>[] values) {
 
-		return Arrays.stream(values).map(Enum::name).collect(Collectors.toList()).toArray(new String[values.length]);
+		return Arrays.stream(values).map(Enum::name).toList().toArray(new String[values.length]);
 	}
 
 	static String[][] getOptions(Enum<?>[] values) {
@@ -30,7 +29,7 @@ public interface ILabel {
 		//
 		int counter = 0;
 		for(Enum<?> value : values) {
-			elements[counter][0] = value instanceof ILabel ? ((ILabel)value).label() : value.toString();
+			elements[counter][0] = value instanceof ILabel label ? label.label() : value.toString();
 			elements[counter][1] = value.name();
 			counter++;
 		}
